# agentic-research-assistant

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/core/: assistant.py
src/ui/: interface.py
